homepage url commit

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Ch7ismail.github.io/Countries-app",
   "name": "countries-app",
   "private": true,
   "version": "0.0.0",
